samples/_failures_safe/1761004588_8fa6c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94ac1f30.c: In function ‘main’:
./samples/SAFE/__tmp_94ac1f30.c:152:5: error: expected declaration or statement at end of input
  152 |     int op_count = sizeof(operations) / sizeof(operations[0]);
      |     ^~~
